# GNSS-Localization

./: 2023A7PS0348G_Archit Sapra.docx  GNSS_pratham.ipynb  README.md  navya_2023A7PS0359G.ipynb
2023A7PS0464G_Varun_Bhatt/: particle_filter.py
2023A7PS0464G_Varun_Bhatt/Research/: Accurate Localisation Based on GNSS and Propagation Knowledge for Safe Applications in Guided Transport
Drafts/: GNSS_pratham.ipynb  readme
Pratham_Allassignments/: GNSS Localisation presentation.pptx  Usecase Diagram_GNSS Localisation.pptx
Pratham_Allassignments/Assignment 3/: readme1
gnss_transform/worlds/: gnss_world.world
ros2pkg_pratham/src/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2pkg_pratham/src/gps_to_global_coordinates/: gps_to_global_coordinates_node.py
ros2pkg_pratham/src/launch/: gazebo_launch.py
varun_gnss_transform/: package.xml  setup.cfg  setup.py
varun_gnss_transform/gnss_transform/: gps_to_gazebo.py
